# Dengue-Fever-Spread-Model

./: .gitignore  CMakeLists.txt  README.md
Data Visualization/: heatmap.py
Data-Visualization/: heatmap.py  sg_zones.geojson
Data-Visualization/1.Baseline/: dengue_log.csv
Data-Visualization/10.Lower-β/: dengue_config.json  dengue_log.csv
Data-Visualization/2.High-Fogging/: dengue_config.json
Data-Visualization/3.No-Fogging/: dengue_config.json
Data-Visualization/4.High-Breeding/: dengue_config.json
Data-Visualization/5.Low-Green-Index/: dengue_config.json
Data-Visualization/6.High-Mobility/: dengue_config.json  dengue_log.csv
Data-Visualization/7.Strong-Seasons/: dengue_config.json
Data-Visualization/8.Early-Season-Peak/: dengue_config.json
Data-Visualization/9.Targeted-Fogging/: dengue_config.json
config/:  dengueVisualization_config.json  dengue_10zones.json  dengue_config.json
main/: CMakeLists.txt  main.cpp
main/include/: dengue_cell.hpp  dengue_coupled.hpp  dengue_state.hpp
